Frontend style and JS added and served.

--- a/Day-7/public/index.html
+++ b/Day-7/public/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome</h1>
-    <a href="/songs"><h3>Click to go to songs</h3></a>
+    <main>
+      <div class="title">
+        <h1>Welcome</h1>
+      </div>
+      <section class="songs">
+        <a href="/songs"><h3>Click to go to songs</h3></a>
+        <img src="https://source.unsplash.com/400x400/?music" alt="music" />
+      </section>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
